--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Javascript Basics</title>
         <script src="CreatingObjects.js"></script>
+        <script src="CreatingClass.js"></script>
     </head>
     <body>
         <h1>Javascript is Awesome</h1>
