--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Javascript Basics</title>
         <script src="CreatingObjects.js"></script>
         <script src="CreatingClass.js"></script>
+        <script src="ErrorHandling.js"></script>
     </head>
     <body>
         <h1>Javascript is Awesome</h1>
